--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -4,7 +4,8 @@
 <table width = "1000" cellpadding = "5" cellspacing = "5" bgcolor = "lightyellow">
   <thead>
     <th>Employee Name</th>
-    <th>Customer and Account Number</th>
+    <th>Customer Name</th>
+    <th>Account Number</th>
     <th>Product</th>
     <th>Date</th>
     <th>Amount</th>
@@ -15,14 +16,15 @@
 
   <tbody>
     <tr>
-      <td> <%= @sale.employee_id %> </td>
-      <td> <%= @sale.customer_id %> </td>
-      <td> <%= @sale.product_id %> </td>
+      <td> <%= @sale.employee.name %> </td>
+      <td> <%= @sale.customer.name %> </td>
+      <td> <%= @sale.customer.account_no %> </td>
+      <td> <%= @sale.product.name %> </td>
       <td> <%= @sale.sale_date %> </td>
       <td> <%= @sale.sale_amount %> </td>
       <td> <%= @sale.units_sold %> </td>
       <td> <%= @sale.invoice_no %> </td>
-      <td> <%= @sale.frequency_id %> </td>
+      <td> <%= @sale.frequency.name %> </td>
     </tr>
   </tbody>
 
